removed overall from status table, changed colormarker on status map (sanity is now considered), fixed a bug that overlapped two nodes on the status map on first load;

--- a/app/assets/stylesheets/xifi.css
+++ b/app/assets/stylesheets/xifi.css
@@ -567,7 +567,7 @@ padding-bottom: 10px;
 .status-row-min
 {
 /* 	width:800px; */
-	width:559px;
+	width:509px;
 	height:30px;
 	line-height:30px;
 }
@@ -602,7 +602,7 @@ padding-bottom: 10px;
 .row-messageMin
 {
 	padding-left: 24px;
-	width:535px;
+	width:485px;
 	height:60px;
 	line-height:30px;
 	border-left:1px solid #CFCFCF;
